--- a/index.html
+++ b/index.html
@@ -28,6 +28,30 @@
         <p v-text="bool ? 'Your name is set ': 'Your Name is not set'"></p>
         <p v-text="title"></p>
         <p v-html="title"></p>
+
+        <!-- Add v-for -->
+        <ul>
+            <li v-for="skill in skills">
+                {{skill}}
+            </li>
+        </ul>
+
+        <ul>
+            <li v-for="(skill , index) in skills">
+               {{index+1}}=> {{skill}}
+            </li>
+        </ul>
+
+        <ul>
+            <li v-for="(test , index) in completedTests">
+                {{index+1}} >> 
+                {{test.testName}}
+                 >> 
+                {{test.testResult}}
+            </li>
+        </ul>
+
+
     </div>
     <script src="js/vue.js"></script>
     <script>
